@@ -15,6 +15,8 @@ repositories {
     }
 }
 
+configurations { mockitoAgent }
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
@@ -33,8 +35,12 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     runtimeOnly libs.org.springframework.boot.spring.boot.devtools
     testImplementation libs.org.springframework.boot.spring.boot.starter.test
+    testRuntimeOnly 'com.h2database:h2'
     testImplementation libs.org.springframework.security.spring.security.test
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.38'
+    mockitoAgent(platform('org.springframework.boot:spring-boot-dependencies:3.4.4'))
+    mockitoAgent('org.mockito:mockito-core') { transitive = false }
 }
 
 
@@ -63,7 +69,8 @@ tasks.withType(Javadoc) {
 test {
     useJUnitPlatform()
     failOnNoDiscoveredTests = false
-    exclude '**/*'
+    exclude '**/AngularTemplateApplicationTests.class'
+    jvmArgs "-javaagent:${configurations.mockitoAgent.asPath}", "-Dnet.bytebuddy.experimental=true"
 }
 
 def frontendDir = "$projectDir/AppClient"
